--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="lettercards.css" />
         <link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
 
-        <script src="jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="jquery.swipe-0.2.js" type="text/javascript" charset="utf-8"></script>
         
         <script type="text/javascript">
